# windows-ai-status-monitor

./: .gitignore  README.md  index.html  package-lock.json  package.json  run-tauri-dev.cmd  vite.config.ts
scripts/: build-installer.ps1  dev.ps1
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: autostart.rs  config.rs  logbook.rs  main.rs  monitor.rs  tray.rs
